codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob6
---
• Explored
  └ List ls -la
    Read foo.txt, bar.txt
